<resources>
    <!--activity_diary_add.xml檔案中的字串-->
<<<<<<< HEAD
    <string name="set_topic">(請輸入您的主題)</string>
    <string name="topic">主題:</string>
    <string name="date">日記時間:____年__月__日</string>
    <string name="sel_date">設定日期</string>
    <string name="enter_content">(請編輯您的日記)</string>
    <string name="content">內容:</string>
    <string name="save_diary">儲存日記</string>
    <!--activity_main.xml檔案中的字串-->
    <string name="add_diary">新增日記</string>
    <string name="add_icon">+</string>
    <string name="exit_diary">離開日記</string>
=======
    <string name="set_topic">(請輸入主題)</string>
    <string name="topic">主題 : </string>
    <string name="time">時間 : </string>
    <string name="date">____ 年 __ 月 __ 日</string>
    <string name="sel_date">設定日期</string>
    <string name="enter_content">(請輸入日記)</string>
    <string name="content">內容 : </string>
    <string name="save_diary">儲存日記</string>
    <string name="cancel_add">取消新增</string>

    <!--activity_main.xml檔案中的字串-->
    <string name="add_diary">新增日記</string>
    <string name="exit_diary">離開日記</string>

>>>>>>> origin/108360116
    <!--activity_diary_cover.xml檔案中的字串-->
    <string name="Click">Click to enter</string>
    <string name="my_diary">My Diary</string>
    <string name="app_name">我的日記</string>
<<<<<<< HEAD
    <!--activity_diary_edit.xml檔案中的字串-->
    <string name="delete_diary">刪除日記</string>
    <!--AndroidManifest.xml檔案中的字串-->
    <string name="edit_diary">編輯日記</string>
</resources>
=======

    <!--activity_diary_edit.xml檔案中的字串-->
    <string name="cancel_diary">取消編輯</string>
    <string name="update_diary">更新日記</string>
    <!--AndroidManifest.xml檔案中的字串-->
    <string name="edit_diary">編輯日記</string>
</resources>
>>>>>>> origin/108360116
