<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".diary_add"
    >
    <!--
    顯示-主題:
    -->
    <TextView
        android:id="@+id/topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/topic"
        android:textColor="#000000"
        android:textSize="18dp"
        android:textStyle="bold" />
    <!--
    編輯主題
    -->
    <EditText
        android:id="@+id/diary_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="18dp"
        android:inputType="textMultiLine"
        android:hint="@string/set_topic"
        android:textColor="#000000"
        android:textStyle="bold"
        />
    <!--
    顯示-尚未設定的日期:
    -->
    <TextView
        android:id="@+id/result_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:text="日記時間:____年__月__日"
        android:textColor="#000000"
        android:textSize="18dp"
        android:textStyle="bold" />
    <!--
    選擇設定日期按鈕:
    -->
    <Button
        android:id="@+id/sel_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="285dp"
        android:layout_marginTop="68dp"
        android:textSize="18dp"
        android:text="@string/sel_date"
        android:background="@drawable/button_rounde"
        android:textColor="#000000" />
    <!--
    顯示-內容:
    -->
    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="130dp"
        android:text="@string/content"
        android:textColor="#000000"
        android:textSize="18dp"
        android:textStyle="bold" />
    <!--
    顯示-編輯日記內容:
    -->
    <EditText
        android:id="@+id/diary_content"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/enter_content"
        android:textColor="#000000"
        android:textStyle="bold"
        />
    <!--
    儲存日記內容按鈕，將日記存在資料表中
    -->
    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="285dp"
        android:layout_marginTop="520dp"
        android:text="@string/save_diary"
        android:textColor="#000000"
        android:textSize="18sp"
        android:background="@drawable/button_rounde" />

</RelativeLayout>